[project]

name = 'yurei'
version = '1.4.1'
description = 'Python toolkit for encryption, authentication, secure IDs, and lightweight storage.'
authors = [
  { name = 'Zek', email = 'zek@europe.com' },
]
readme = 'README.md'
requires-python = '>=3.10'
license = 'MIT'
keywords = ['security', 'encryption', 'hashing', 'UUID', 'tokens', 'obfuscation']
classifiers = [
  'Programming Language :: Python :: 3',
  'Operating System :: OS Independent',
  'Topic :: Security :: Cryptography',
  'Topic :: Software Development :: Libraries',
]


